# zn-zed

./: Cargo.toml
.claude/qa/: inbox-chat-attachments.md
.claude/skills/verify/: SKILL.md
.claude/skills/zed-nightly-build/: SKILL.md
.claude/skills/zed-nightly-build/scripts/: build-nightly.ps1
.github/workflows/: fork-release.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/acp_thread/src/: mention.rs
crates/agent/src/: thread.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs  claude_usage.rs  completion_provider.rs  conversation_view.rs  inbox_mentions.rs  mention_set.rs  message_editor.rs
crates/agent_ui/src/conversation_view/: thread_view.rs
crates/agent_ui/src/ui/: mention_crease.rs
crates/auto_update/src/: auto_update.rs  fork_updates.rs
crates/gpui/src/elements/: text.rs
crates/icons/src/: icons.rs
crates/inbox_mcp/: CLAUDE.md  Cargo.toml
crates/inbox_mcp/src/: http_server.rs  inbox_mcp.rs  project_resolve.rs  rpc.rs  tools.rs
crates/inbox_panel/: CLAUDE.md  Cargo.toml
crates/inbox_panel/src/: attachment.rs  block.rs  detail_view.rs  github_issues.rs  inbox_model.rs  inbox_panel.rs  inbox_panel_settings.rs  inbox_store.rs  issue_detail.rs  markdown_codec.rs  slash_menu.rs  type_editor.rs
crates/project/src/: context_server_store.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: settings_content.rs
crates/workspace/src/: pane.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
script/: bundle-windows.ps1  fork-release-notes.ps1
