[package]
name = "inbox_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/inbox_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
db.workspace = true
fs.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
