[package]
name = "inbox_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/inbox_panel.rs"
doctest = false

[dependencies]
agent_ui.workspace = true
anyhow.workspace = true
editor.workspace = true
fs.workspace = true
futures.workspace = true
fuzzy.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
markdown.workspace = true
menu.workspace = true
paths.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
sha2.workspace = true
text.workspace = true
time.workspace = true
theme_settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
project = { workspace = true, features = ["test-support"] }
# agent_ui pulls in remote_connection; project/workspace dev-deps enable
# `remote/test-support` (exposing the Mock variant), so pair it with
# remote_connection's own test-support to keep its match exhaustive.
remote_connection = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
theme.workspace = true
workspace = { workspace = true, features = ["test-support"] }
